--- a/frontend/src/style/style.css
+++ b/frontend/src/style/style.css
@@ -10,5 +10,11 @@ body,
 .homepage h1 {
   color: blue;
 }
+.homepage .post {
+  min-height: 150px;
+  border: 2px solid black;
+  margin: 50px;
+  padding: 25px;
+}
 
 /*# sourceMappingURL=style.css.map */
